fix: text-overflow in profile info and row-height

--- a/blocks/profile/__name-status-box/profile__name-status-box.css
+++ b/blocks/profile/__name-status-box/profile__name-status-box.css
@@ -2,7 +2,6 @@
   display: grid;
   word-wrap: normal;
   grid-template-columns: auto 18px;
-  grid-template-rows: 27px 14px;
 
   grid-column-gap: 10px;
   grid-row-gap: 14px;
@@ -12,7 +11,6 @@
 @media screen and (min-width: 1024px) {
   .profile__name-status-box {
     grid-template-columns: auto 24px;
-    grid-template-rows: 39px 18px;
     grid-column-gap: 18px;
     grid-row-gap: 16px;
   }
