--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,12 +8,17 @@
   font-weight: 500;
   font-size: 27px;
   line-height: 33px;
+
+  text-overflow: ellipsis;
+  max-width: 235px;
+  overflow: hidden;
+  white-space: nowrap; 
 }
 
 @media screen and (min-width: 1024px) {
   .profile__name {
-    font-weight: 500;
     font-size: 42px;
     line-height: 48px;
+    max-width: 320px;
   }
 }
