--- a/blocks/profile/__status/profile__status.css
+++ b/blocks/profile/__status/profile__status.css
@@ -8,11 +8,18 @@
   font-size: 14px;
   line-height: 17px;
   text-align: center;
+
+  text-overflow: ellipsis;
+  max-width: 235px;
+  overflow: hidden;
+  white-space: nowrap; 
 }
 
 @media screen and (min-width: 1024px) {
   .profile__status {
     font-size: 18px;
     line-height: 22px;
+    max-width: 320px;
+    justify-self: baseline;
   }
 }
